# near-nft-tutorial-repos

./: help.txt
nft-tutorial-frontend/src/Components/: MintingTool.js
nft-tutorial/nft-contract/: Cargo.toml
nft-tutorial/nft-contract/src/: approval.rs  nft_core.rs
